<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="error_message">Unable to fetch data, please try again</string>
    <string name="settings">Settings</string>
    <string name="details">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sort_type">Sort By</string>
    <string name="pref_sort_type_key">sort_by</string>

    <string-array name="pref_sort_type_titles">
        <item>Popularity</item>
        <item>Top Rated</item>
        <item>Favourites</item>
    </string-array>

    <string-array name="pref_sort_type_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>@string/favourites</item>
    </string-array>

    <string name="favourites">favourites</string>

    <string name="pref_sort_type_default_value">popular</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="play_trailer">Play trailer</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="offline_message">Looks like you are offline, here are your favourite movies. Get back online to see more</string>
    <string name="marked_favourites">In Favourites</string>
    <string name="see_more">See more</string>
</resources>
